--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 :root {
+  /* Pokemon type colors */
   --grass: #7AC74C;
   --poison: #A33EA1;
   --normal: #A8A77A;
@@ -17,6 +18,10 @@
   --dark: #705746;
   --steel: #B7B7CE;
   --fairy: #D685AD;
+
+  /* App colors */
+  --off-white: #fefefe;
+  --dark-gray: #333333;
 }
 
 *,
@@ -29,6 +34,8 @@ html,
 body,
 #root {
   font-family: 'Nunito', sans-serif;
+  background-color: var(--off-white);
+  color: var(--dark-gray);
 }
 
 img {
