--- a/src/pages/HomePage/components/PokemonCard/PokemonCard.module.css
+++ b/src/pages/HomePage/components/PokemonCard/PokemonCard.module.css
@@ -14,7 +14,7 @@
 }
 
 .card:hover .sprite {
-  scale: 1.01;
+  scale: 1.05;
   filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.3));
 }
 
@@ -26,7 +26,7 @@
   left: 50%;
   translate: -50%;
   filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.2));
-  transition: all 100ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+  transition: scale 100ms ease-in-out, filter 100ms ease-in-out;
   transform-origin: center;
 }
 
@@ -37,6 +37,7 @@
 .name {
   text-transform: capitalize;
   margin-block: 0.75rem;
+  font-weight: 600;
 }
 
 .types {
@@ -48,7 +49,7 @@
 .types li {
   padding: 0.5rem 1rem;
   text-transform: capitalize;
-  font-weight: 600;
+  font-weight: 500;
   /* Pill shape = border-radius needs to be greater than the height */
   border-radius: 10000px;
 }
