--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
 html,
 body,
 #root {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background-color: var(--off-white);
   color: var(--dark-gray);
 }
