--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   display: grid;
   justify-items: center;
-  padding-bottom: 2rem;
+  padding: 1rem;
 }
 
 .list {
@@ -11,7 +11,7 @@
   row-gap: 5rem;
   column-gap: 2rem;
   width: 100%;
-  padding: 6rem 2rem 2rem 2rem;
+  padding-top: 6rem;
   align-items: center;
 }
 
