--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -12,6 +12,7 @@
   column-gap: 2rem;
   width: 100%;
   padding-top: 6rem;
+  margin-bottom: 1rem;
   align-items: center;
 }
 
@@ -29,8 +30,8 @@
   }
 }
 
-/* 67.8125em * 16 = 1085px */
-@media screen and (min-width: 67.8125em) {
+/* 68.4375em * 16 = 1095px */
+@media screen and (min-width: 68.4375em) {
   .list {
     grid-template-columns: repeat(4, 1fr);
   }
