--- a/src/pages/PokemonPage/PokemonPage.module.css
+++ b/src/pages/PokemonPage/PokemonPage.module.css
@@ -2,8 +2,8 @@
   max-width: 1400px;
   margin: 0 auto;
   display: grid;
-  justify-items: center;
   padding: 1rem;
+  row-gap: 1rem;
 }
 
 .header {
@@ -62,4 +62,27 @@
   color: var(--off-white);
   /* Pill shape = border-radius needs to be greater than the height */
   border-radius: 10000px;
+}
+
+.flavorText {
+  margin: 0;
+}
+
+.section {
+  display: grid;
+  row-gap: 0.5rem;
+}
+
+.sectionHeading {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+}
+
+.characteristics {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  /* grid-template-columns: repeat(3, minmax(0, 1fr)); */
+  /* grid-auto-columns: minmax(0, 1fr); */
+  /* grid-auto-flow: column; */
+  gap: 1rem;
 }
