--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,3 +1,5 @@
+@value medium, large from '@/styles/breakpoints';
+
 .container {
   max-width: 1400px;
   margin: 0 auto;
@@ -23,15 +25,13 @@
 }
 
 
-/* 35.5em * 16 = 500px */
-@media screen and (min-width: 35.5em) {
+@media medium {
   .list {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-/* 68.4375em * 16 = 1095px */
-@media screen and (min-width: 68.4375em) {
+@media large {
   .list {
     grid-template-columns: repeat(4, 1fr);
   }
