--- a/src/pages/PokemonPage/PokemonPage.module.css
+++ b/src/pages/PokemonPage/PokemonPage.module.css
@@ -1,38 +1,22 @@
+@value medium, large from '@/styles/breakpoints';
+
 .container {
   max-width: 1400px;
   margin: 0 auto;
   display: grid;
   padding: 1rem;
-  row-gap: 1rem;
 }
 
 .header {
   display: grid;
-  row-gap: 1rem;
-}
-
-.nameWrapper {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 0.5rem;
-  align-items: baseline;
-}
-
-.index {
-  font-size: 1.2rem;
-}
-
-.name {
-  font-size: 2.5rem;
-  text-transform: capitalize;
 }
 
 .spriteWrapper {
   max-width: 250px;
-  aspect-ratio: 1;
   width: 100%;
   margin: 0 auto;
   position: relative;
+  flex-grow: 0;
 }
 
 .sprite {
@@ -49,7 +33,28 @@
   border-radius: 50%;
 }
 
+.baseInfo {
+  margin: 0 auto;
+}
+
+.nameWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 0.5rem;
+  align-items: baseline;
+}
+
+.id {
+  font-size: 1.2rem;
+}
+
+.name {
+  font-size: 2.5rem;
+  text-transform: capitalize;
+}
+
 .types {
+  margin-top: 1rem;
   list-style: none;
   display: flex;
   gap: 1rem;
@@ -71,6 +76,7 @@
 .section {
   display: grid;
   row-gap: 0.5rem;
+  margin-top: 2rem;
 }
 
 .sectionHeading {
@@ -81,8 +87,32 @@
 .characteristics {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-  /* grid-template-columns: repeat(3, minmax(0, 1fr)); */
-  /* grid-auto-columns: minmax(0, 1fr); */
-  /* grid-auto-flow: column; */
   gap: 1rem;
+}
+
+@media medium {
+  .baseInfo {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    gap: 1rem;
+  }
+
+  .characteristics {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media large {
+  .baseInfo {
+    flex: 1;
+  }
+
+  .flavorTextWrapper {
+    flex: 1;
+  }
+
+  .characteristics {
+    grid-template-columns: repeat(6, 1fr);
+  }
 }
