--- a/src/pages/PokemonPage/Characteristic/Characteristic.module.css
+++ b/src/pages/PokemonPage/Characteristic/Characteristic.module.css
@@ -3,7 +3,7 @@
   row-gap: 0.25rem;
   text-align: center;
   justify-items: center;
-  background-color: #eeeeee;
+  background-color: var(--light-gray);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   padding: 1rem 0;
   border-radius: 5px;
