--- a/src/pages/PokemonPage/PokemonPage.module.css
+++ b/src/pages/PokemonPage/PokemonPage.module.css
@@ -11,6 +11,18 @@
   display: grid;
 }
 
+.section {
+  display: grid;
+  row-gap: 0.5rem;
+  margin-top: 2rem;
+}
+
+.sectionHeading {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  word-spacing: 0.2rem;
+}
+
 .spriteWrapper {
   max-width: 250px;
   width: 100%;
@@ -73,21 +85,79 @@
   margin: 0;
 }
 
-.section {
-  display: grid;
-  row-gap: 0.5rem;
-  margin-top: 2rem;
-}
-
-.sectionHeading {
-  text-transform: uppercase;
-  font-size: 1.2rem;
-}
-
 .characteristics {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
   gap: 1rem;
+}
+
+.statsSection {
+  display: grid;
+  gap: 0.75rem;
+  width: 100%;
+}
+
+.table {
+  width: 100%;
+}
+
+.table td {
+  padding-block: 0.5rem;
+}
+
+.statLabel {
+  padding: 0;
+  font-weight: 600;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  width: 75px;
+  text-align: left;
+  text-wrap: nowrap;
+}
+
+.statTrack,
+.statTrackFill,
+.statTrackValue {
+  border-radius: 3px;
+}
+
+.statTrack {
+  display: flex;
+  align-items: center;
+  background: var(--light-gray);
+  height: 0.75rem;
+}
+
+.statTrackFill {
+  width: 100%;
+  height: 100%;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.statTrackValue {
+  padding: 0.1rem 0.4rem;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  background: white;
+  text-align: center;
+  font-size: 0.75rem;
+  font-weight: 600;
+  z-index: 2;
+}
+
+.animateGrow {
+  animation: grow 250ms ease-in;
+}
+
+@keyframes grow {
+  0% {
+    max-width: 0;
+  }
+
+  100% {
+    max-width: auto;
+  }
 }
 
 @media medium {
@@ -114,5 +184,9 @@
 
   .characteristics {
     grid-template-columns: repeat(6, 1fr);
+  }
+
+  .statsSection {
+    width: 50%;
   }
 }
