--- a/src/pages/PokemonPage/PokemonPage.module.css
+++ b/src/pages/PokemonPage/PokemonPage.module.css
@@ -10,6 +10,7 @@
   margin: 0 auto;
   display: grid;
   padding: 1rem;
+  width: 100%;
 }
 
 .header {
@@ -20,6 +21,7 @@
   display: grid;
   row-gap: 0.5rem;
   margin-top: 2rem;
+  width: 100%;
 }
 
 .sectionHeading {
@@ -101,7 +103,6 @@
 .statsSection {
   display: grid;
   gap: 0.75rem;
-  width: 100%;
 }
 
 .table {
@@ -157,6 +158,58 @@
   animation: grow 250ms ease-in;
 }
 
+.evolutionsSection {
+  row-gap: 2rem;
+}
+
+.evolutionWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.evolutionPokemon {
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 0.5rem;
+  flex: 1;
+}
+
+.evolutionPokemonSpriteWrapper {
+  position: relative;
+  display: grid;
+  place-items: center;
+}
+
+.pokeballBg {
+  position: absolute;
+  background-color: var(--light-gray);
+  mask-image: url('../../assets/pokeball-bg.svg');
+  mask-repeat: no-repeat;
+  mask-size: contain;
+  mask-position: center;
+  width: 90%;
+  height: 90%;
+}
+
+.evolutionPokemon img {
+  z-index: 1;
+  width: 75%;
+}
+
+.evolutionPokemon span {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.evolutionArrow {
+  stroke: var(--light-gray);
+  flex: 0.5;
+}
+
 @keyframes grow {
   0% {
     max-width: 0;
@@ -182,6 +235,15 @@
   .characteristics {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .evolutionPokemon {
+    flex-direction: row;
+  }
+
+  .evolutionPokemonTo {
+    flex-direction: row-reverse;
+  }
+
 }
 
 @media large {
