--- a/src/pages/PokemonPage/components/BaseStats/BaseStats.module.css
+++ b/src/pages/PokemonPage/components/BaseStats/BaseStats.module.css
@@ -37,6 +37,8 @@
 }
 
 .statTrackFill {
+  --bg-color: gray;
+  background: var(--bg-color);
   width: 100%;
   height: 100%;
   border-top-right-radius: 0;
