Create pokeapi service api call functions and parse the data inside them.

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -17,6 +17,12 @@
 }
 
 
+.loaderWrapper {
+  display: flex;
+  margin: 0 auto;
+  height: 100%;
+}
+
 @media medium {
   .list {
     grid-template-columns: repeat(2, 1fr);
