--- a/src/pages/HomePage/PokemonCard/PokemonCard.module.css
+++ b/src/pages/HomePage/PokemonCard/PokemonCard.module.css
@@ -19,6 +19,11 @@
   filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.3));
 }
 
+.link {
+  text-decoration: none;
+  color: inherit;
+}
+
 .sprite {
   width: 65%;
   max-width: 200px;
@@ -39,4 +44,11 @@
   text-transform: capitalize;
   margin-bottom: 0.75rem;
   font-weight: 600;
+}
+
+.types {
+  margin-top: 1rem;
+  list-style: none;
+  display: flex;
+  gap: 1rem;
 }
