--- a/src/pages/PokemonPage/components/BaseStats/BaseStats.module.css
+++ b/src/pages/PokemonPage/components/BaseStats/BaseStats.module.css
@@ -1,4 +1,4 @@
-@value large from '@/styles/breakpoints';
+@value medium from '@/styles/breakpoints';
 
 .baseStats {
   display: grid;
@@ -70,7 +70,7 @@
   }
 }
 
-@media large {
+@media medium {
   .baseStats {
     width: 50%;
   }
