--- a/src/pages/PokemonPage/components/Header/Header.module.css
+++ b/src/pages/PokemonPage/components/Header/Header.module.css
@@ -23,8 +23,9 @@
   width: 80%;
   height: 80%;
   position: absolute;
+  left: 50%;
   top: 50%;
-  translate: 0 -50%;
+  translate: -50% -50%;
   border-radius: 50%;
 }
 
@@ -51,6 +52,10 @@
 
 .types {
   justify-content: center;
+  margin-top: 1rem;
+  list-style: none;
+  display: flex;
+  gap: 1rem;
 }
 
 .flavorText {
