--- a/src/pages/PokemonPage/components/BaseStats/BaseStats.module.css
+++ b/src/pages/PokemonPage/components/BaseStats/BaseStats.module.css
@@ -26,7 +26,7 @@
 .statTrack,
 .statTrackFill,
 .statTrackValue {
-  border-radius: 3px;
+  border-radius: var(--border-radius);
 }
 
 .statTrack {
@@ -37,7 +37,6 @@
 }
 
 .statTrackFill {
-  --bg-color: gray;
   background: var(--bg-color);
   width: 100%;
   height: 100%;
