--- a/src/pages/HomePage/PokemonCard/PokemonCard.module.css
+++ b/src/pages/HomePage/PokemonCard/PokemonCard.module.css
@@ -3,7 +3,7 @@
   background: color-mix(in srgb, var(--bg-color) 25%, transparent);
   min-width: 227.5px;
   width: 100%;
-  border-radius: 1rem;
+  border-radius: var(--border-radius);
   padding: 1.5rem;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 3px 5px;
   position: relative;
