--- a/src/pages/PokemonPage/components/Characteristics/Characteristics.module.css
+++ b/src/pages/PokemonPage/components/Characteristics/Characteristics.module.css
@@ -4,16 +4,17 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
   gap: 1rem;
+  height: 100%;
 }
 
 @media medium {
   .characteristics {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media large {
   .characteristics {
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
