--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,5 +1,8 @@
+@value medium from '@/styles/breakpoints';
+
 .section {
   display: flex;
+  text-align: center;
   flex-direction: column;
   row-gap: 0.5rem;
   margin-top: 2rem;
@@ -10,4 +13,10 @@
   text-transform: uppercase;
   font-size: 1.2rem;
   word-spacing: 0.2rem;
+}
+
+@media medium {
+  .section {
+    text-align: left;
+  }
 }
