--- a/src/pages/PokemonPage/components/Characteristics/Characteristic/Characteristic.module.css
+++ b/src/pages/PokemonPage/components/Characteristics/Characteristic/Characteristic.module.css
@@ -1,9 +1,11 @@
 .characteristic {
   color: var(--icon-color);
   display: grid;
-  row-gap: 0.25rem;
+  row-gap: 0.5rem;
   text-align: center;
   justify-items: center;
+  align-items: center;
+  align-content: center;
   background-color: var(--light-gray);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   padding: 1rem 0;
