--- a/src/pages/PokemonPage/components/Characteristics/Characteristics.module.css
+++ b/src/pages/PokemonPage/components/Characteristics/Characteristics.module.css
@@ -1,19 +1,13 @@
-@value medium, large from '@/styles/breakpoints';
+@value medium from '@/styles/breakpoints';
 
 .characteristics {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
   gap: 1rem;
   height: 100%;
 }
 
 @media medium {
-  .characteristics {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media large {
   .characteristics {
     grid-template-columns: repeat(2, 1fr);
   }
