--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,8 @@
   --off-white: #fefefe;
   --dark-gray: #333333;
   --gray: #cccccc;
-  --light-gray: #eeeeee;
+  --light-gray: #f5f5f5;
+  ;
 }
 
 *,
