Change Section title to h1

--- a/src/pages/PokemonPage/components/Effectiveness/Effectiveness.module.css
+++ b/src/pages/PokemonPage/components/Effectiveness/Effectiveness.module.css
@@ -71,7 +71,8 @@
   background: var(--light-gray);
 }
 
-.multiplierWrapper h3 {
+.multiplierTitle {
+  font-size: 1rem;
   text-align: center;
 }
 
