--- a/src/pages/PokemonPage/components/Characteristics/Characteristic/Characteristic.module.css
+++ b/src/pages/PokemonPage/components/Characteristics/Characteristic/Characteristic.module.css
@@ -11,12 +11,12 @@
   border-radius: var(--border-radius);
 }
 
-.characteristic h3 {
+.title {
   font-size: 1rem;
   font-weight: 400;
   color: #888888;
 }
 
-.characteristic span {
+.content {
   color: var(--dark-gray);
 }
