--- a/src/pages/PokemonPage/components/Effectiveness/Effectiveness.module.css
+++ b/src/pages/PokemonPage/components/Effectiveness/Effectiveness.module.css
@@ -1,4 +1,4 @@
-@value medium from '@/styles/breakpoints';
+@value small from '@/styles/breakpoints';
 
 .sides {
   display: flex;
@@ -88,7 +88,7 @@
   text-align: center;
 }
 
-@media medium {
+@media small {
   .sides {
     flex-direction: row;
   }
