--- a/src/styles/breakpoints.css
+++ b/src/styles/breakpoints.css
@@ -1,5 +1,8 @@
 /* 568px */
-@value medium: screen and (min-width: 35.5em);
+@value small: screen and (min-width: 35.5em);
+
+/* 800px */
+@value medium: screen and (min-width: 50em);
 
 /* 1095px */
 @value large: screen and (min-width: 68.4375em);
