Display pokemon legendary/mythical status on pokemon page

--- a/src/pages/PokemonPage/components/Header/Header.module.css
+++ b/src/pages/PokemonPage/components/Header/Header.module.css
@@ -33,8 +33,13 @@
   margin: 0 auto;
 }
 
+.pokemonStatus {
+  margin: 0 auto;
+}
+
 .nameWrapper {
   display: flex;
+  margin-top: 1rem;
   flex-wrap: wrap;
   column-gap: 0.5rem;
   align-items: baseline;
@@ -68,6 +73,10 @@
     justify-content: center;
     display: flex;
     gap: 1rem;
+  }
+
+  .pokemonStatus {
+    margin: 0;
   }
 
   .types {
