--- a/src/components/ErrorFallback/ErrorFallback.module.css
+++ b/src/components/ErrorFallback/ErrorFallback.module.css
@@ -6,3 +6,10 @@
   line-height: 1;
   text-align: center;
 }
+
+.actions {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
